@@ -23,6 +23,7 @@ NEW: [features/improvements]
 +Add French Translation
 +New bundled style sheet 'Mocha'
 +Improved context menu behavior
++Can toggle status bar visibility
 
 BUG FIXES:
 +Add missing keywords for DOS Batch scripts
